<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.order.StartFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:importantForAccessibility="no"
        android:src="@drawable/alimentos_imagem_bw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/go_to_diary_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/calorias_diarias"
        app:layout_constraintBottom_toTopOf="@+id/go_to_tmb_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/go_to_tmb_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular_tmb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/go_to_list_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/lista_alimentos"
        app:layout_constraintTop_toBottomOf="@+id/go_to_tmb_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>