<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.order.DiaryFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.projetofinal.model.FoodViewModel" />

        <variable
            name="diaryFragment"
            type="com.example.projetofinal.ui.order.DiaryFragment" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/total_calories_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAppearance="?attr/textAppearanceBody1"
                android:text="@{@string/total_calories(viewModel.tmb)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/total_calories"/>

            <TextView
                android:id="@+id/consumed_calories_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAppearance="?attr/textAppearanceBody1"
                android:text="@{@string/consumed_calories(viewModel.subtotal)}"
                app:layout_constraintTop_toBottomOf="@+id/total_calories_text_view"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:text="@string/consumed_calories"/>

            <TextView
                android:id="@+id/remaining_calories_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAppearance="?attr/textAppearanceBody1"
                android:text="@{@string/remaining_calories(viewModel.total)}"
                app:layout_constraintTop_toBottomOf="@+id/consumed_calories_text_view"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:text="@string/remaining_calories"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>