<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.order.TmbFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.projetofinal.model.FoodViewModel" />

        <variable
            name="tmbFragment"
            type="com.example.projetofinal.ui.order.TmbFragment" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">


            <TextView
                android:id="@+id/textView_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                android:text="@string/peso_kg"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <EditText
                android:id="@+id/editText_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:hint="70 kg"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_weight"
                tools:ignore="HardcodedText"/>

            <TextView
                android:id="@+id/textView_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                android:text="@string/altura_cm"
                android:layout_margin="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_weight"/>

            <EditText
                android:id="@+id/editText_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:ems="10"
                android:inputType="number"
                android:minHeight="48dp"
                android:hint="170 cm"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_height"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                android:text="@string/idade_anos"
                android:layout_margin="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_height"/>

            <EditText
                android:id="@+id/editText_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:ems="10"
                android:inputType="number"
                android:minHeight="48dp"
                android:hint="21 anos"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_age"
                tools:ignore="HardcodedText" />

            <RadioGroup
                android:id="@+id/gender_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:checkedButton="@id/male_btn"
                app:layout_constraintStart_toStartOf="@+id/editText_age"
                app:layout_constraintTop_toBottomOf="@+id/editText_age">

                <RadioButton
                    android:id="@+id/male_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_male_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text="@string/homem"/>

                <RadioButton
                    android:id="@+id/female_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_female_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text="@string/mulher"/>

            </RadioGroup>

            <Button
                android:id="@+id/tmb_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:onClick="@{() -> tmbFragment.calculateTMB()}"
                android:text="@string/calcular_tmb"
                app:layout_constraintTop_toBottomOf="@+id/gender_options"/>

            <TextView
                android:id="@+id/tmb_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textAppearance="?attr/textAppearanceBody1"
                android:text=""
                tools:text="2000 kcal"
                app:layout_constraintTop_toBottomOf="@id/tmb_btn"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>